--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -13,5 +13,8 @@
       <input type="number" name="num2" />
       <input type="submit" value="実行" />
     </form>
+    <div>
+      <a href="user">ユーザーリスト</a>
+    </div>
   </body>
 </html>
