--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -21,6 +21,11 @@
       </tr>
     </table>
     <div>
+      <form th:action="@{/user/add}" method="get">
+        <input type="submit" value="新規追加" />
+      </form>
+    </div>
+    <div>
       <a th:href="@{/}">戻る</a>
     </div>
   </body>
